--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@
 'afterpreprocessing_old.csv' filter=lfs diff=lfs merge=lfs -text
 'result.csv' filter=lfs diff=lfs merge=lfs -text
 '10klistings_2yrs.csv' filter=lfs diff=lfs merge=lfs -text
+'10klistings_2yrs_reviews.csv' filter=lfs diff=lfs merge=lfs -text
